--- a/third code.html
+++ b/third code.html
@@ -15,13 +15,13 @@
          <h2>Photos by SeokHyeon</h2>
            <div>
                <p>
-                   207 단합한 날의 하늘 <br><img src="단합하늘.jpeg" alt="단합하늘" width="100%" style="max-width: 700px;">
+                   207 단합한 날의 하늘 <br><img src="sky.jpg" alt="단합하늘" width="100%" style="max-width: 700px;">
                </p>
                <p>
-                   연신내 요요라멘 부타동 <br><img src="부타동.jpeg" alt="부타동" width="100%" style="max-width: 700px;">
+                   연신내 요요라멘 부타동 <br><img src="buta.jpg" alt="부타동" width="100%" style="max-width: 700px;">
                </p>
                <p>
-                   하울의 움직이는 성 드로잉 (feat.수학시간) <br><img src="하울의성 드로잉.jpeg" alt="하울의 움직이는 성" width="100%" style="max-width: 700px;">
+                   하울의 움직이는 성 드로잉 (feat.수학시간) <br><img src="castlehaul.jpg" alt="하울의 움직이는 성" width="100%" style="max-width: 700px;">
                </p>
            </div> 
      </body>
