--- a/second code.html
+++ b/second code.html
@@ -12,9 +12,10 @@
              <li><a href="second code.html">Introduction</a> </li>
              <li><a href="third code.html">Photos</a></li>
             </ol>
-         <h2>Hello I'm SeokHyeon, 18old</h2>
+         <h2>Wellcome to my first web I'm 18</h2>
            <div>
-                <p>SeokHyeon's <a href="https://instagram.com/k_bighyun?igshid=mjedzeae8pga" target="blank"> instagram </a></p> 
+               <span style="color: aqua;">contact</span> 
+            <p>SeokHyeon's <a href="https://instagram.com/k_bighyun?igshid=mjedzeae8pga" target="blank"> instagram </a></p> 
                 <p>SeokHyeon's <a href="https://m.blog.naver.com/102eagless" target="blank">naver blog</a></p>
                 <p>SeokHyeon's <a href="카카오톡 오픈채팅을 시작해 보세요.
                     링크를 선택하면 카카오톡이 실행됩니다.
