--- a/second code.html
+++ b/second code.html
@@ -22,7 +22,11 @@
                     
                     웹사이트 타고 들어온 사람들
                     https://open.kakao.com/o/sawUNMLc">kakaotalk openchat</a></p>
-           </div> 
+              <p>
+                
+                learned coding from here &#8595; <br><iframe width="640" height="360" src="https://www.youtube.com/embed/tZooW6PritE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+              </p>
+                </div> 
      </body>
  </html>
  
