--- a/first code.html
+++ b/first code.html
@@ -22,7 +22,28 @@
                </p>  
                <p>웹을 처음 배우는건 어렵지만 제가 갈 첫 걸음이 될 생각을 하니 기쁘네요.</p> 
                <img src="coding2.jpg" alt="이거 보이면 똥컴" width="100%">  <p style="margin-top: 45px;">오늘은 이걸 조금 공부하고 줌 수업을 한 다음에 저녁공부를 조금 하고 그 다음에 밥 먹고 자겠습니다. </p> 
-        </div> 
+                 <p>
+                    <div id="disqus_thread"></div>
+                    <script>
+                        /**
+                        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                        /*
+                        var disqus_config = function () {
+                        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                        };
+                        */
+                        (function() { // DON'T EDIT BELOW THIS LINE
+                        var d = document, s = d.createElement('script');
+                        s.src = 'https://seokhyeon-first-web.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                        })();
+                    </script>
+                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                 </p>
+            </div> 
      </body>
  </html>
  
