--- a/first code.html
+++ b/first code.html
@@ -3,15 +3,32 @@
     <head>
          <title>SH.web Title.</title>
          <meta charset="utf-8">
+         <style>
+             a {color: black; font-style: italic;
+             text-decoration: none;}
+         ol{margin-left: -20px;}
+             h1{text-align: center; font-size:70px; margin-top: -10px;}
+         </style>
     </head>
     
      <body>
+         <p>
+            <h1><a href="index.html">Main</a></h1>
+            <ol>
+            <li><a href="first code.html" class="saw">Title</a></li>
+            <li><a href="second code.html" class="saw">Introduction</a> </li>
+            <li><a href="third code.html" class="saw">Photos</a></li>
+            </ol>
+            <link rel="stylesheet" href="index.css">
+        </p>
+            <!--
          <h1><a href="index.html">Main</a></h1>
              <ol>
              <li><a href="first code.html">Title</a></li>
              <li><a href="second code.html">Introduction</a> </li>
              <li><a href="third code.html">Photos</a></li>
             </ol>
+        -->
          <h2>SeokHyeon's First Web</h2>
            <div>
                <p>
@@ -22,27 +39,6 @@
                </p>  
                <p>웹을 처음 배우는건 어렵지만 제가 갈 첫 걸음이 될 생각을 하니 기쁘네요.</p> 
                <img src="coding2.jpg" alt="이거 보이면 똥컴" width="100%">  <p style="margin-top: 45px;">오늘은 이걸 조금 공부하고 줌 수업을 한 다음에 저녁공부를 조금 하고 그 다음에 밥 먹고 자겠습니다. </p> 
-                 <p>
-                    <div id="disqus_thread"></div>
-                    <script>
-                        /**
-                        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-                        /*
-                        var disqus_config = function () {
-                        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-                        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                        };
-                        */
-                        (function() { // DON'T EDIT BELOW THIS LINE
-                        var d = document, s = d.createElement('script');
-                        s.src = 'https://seokhyeon-first-web.disqus.com/embed.js';
-                        s.setAttribute('data-timestamp', +new Date());
-                        (d.head || d.body).appendChild(s);
-                        })();
-                    </script>
-                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                 </p>
             </div> 
      </body>
  </html>
