--- a/third code.html
+++ b/third code.html
@@ -3,15 +3,25 @@
     <head>
          <title>SH.web photos.</title>
          <meta charset="utf-8">
-    </head>
+         <style>
+           a {color: black; font-style: italic;
+             text-decoration: none;}
+         ol{margin-left: -20px;}
+             h1{text-align: center; font-size:70px; margin-top: -10px;}
+            h2{text-align: center; font-size: 25px;}
+        </style>
+        </head>
     
      <body>
-         <h1><a href="index.html">Main</a></h1>
+         <p>
+             <h1><a href="index.html">Main</a></h1>
              <ol>
-             <li><a href="first code.html">Title</a></li>
-             <li><a href="second code.html">Introduction</a> </li>
-             <li><a href="third code.html">Photos</a></li>
+             <li><a href="first code.html" class="saw" >Title</a></li>
+             <li><a href="second code.html" class="saw" >Introduction</a> </li>
+             <li><a href="third code.html" class="saw" >Photos</a></li>
             </ol>
+        <link rel="stylesheet" href="index.css">
+        </p>
          <h2>Photos by SeokHyeon</h2>
            <div>
                <p>
