--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
     <head>
          <title>Web by hyeon</title>
          <meta charset="utf-8">
-    </head>
+         <style>
+            a {color: black; font-style: italic;
+            text-decoration: none;}
+        h1{font-size: 70px; margin-top: -10px; text-align: center;}
+        ol{margin-left: -20px;}
+        h2{font-size: 25px; text-align: center;}
+        h3{font-size: 17px; text-align: center;}
+        
+        </style>
+        </head>
     
      <body>
-         <h1><a href="index.html">Main</a></h1>
+         <p>
+             <h1><a href="index.html">Main</a></h1>
              <ol>
-             <li><a href="first code.html">Title</a></li>
-             <li><a href="second code.html">Introduction</a> </li>
-             <li><a href="third code.html">Photos</a></li>
+             <li><a href="first code.html" class="saw">Title</a></li>
+             <li><a href="second code.html" class="saw">Introduction</a> </li>
+             <li><a href="third code.html" class="saw">Photos</a></li>
             </ol>
+            <link rel="stylesheet" href="index.css">
+        </p>
          <h2>SeokHyeon's First Web</h2>
            <div>
                <p>
