--- a/first code.html
+++ b/first code.html
@@ -8,6 +8,7 @@
              text-decoration: none;}
          ol{margin-left: -20px;}
              h1{text-align: center; font-size:70px; margin-top: -10px;}
+             h2{text-align: center;}
          </style>
     </head>
     
