--- a/third code.html
+++ b/third code.html
@@ -3,18 +3,19 @@
     <head>
          <title>SH.web photos.</title>
          <meta charset="utf-8">
-         <style>
-           a {color: black; font-style: italic;
-             text-decoration: none;}
-         ol{margin-left: -20px;}
+         <!-- 
+             <style>
+          a {color: black; font-style: italic; text-decoration: none;}
+            ol{margin-left: -20px;}
              h1{text-align: center; font-size:70px; margin-top: -10px;}
             h2{text-align: center; font-size: 25px;}
         </style>
-        </head>
-    
-     <body>
+         -->
+    </head>
+     
+   <body>
          <p>
-             <h1><a href="index.html">Main</a></h1>
+             <h1><a href="index.html"> Main</a></h1>
              <ol>
              <li><a href="first code.html" class="saw" >Title</a></li>
              <li><a href="second code.html" class="saw" >Introduction</a> </li>
