--- a/second code.html
+++ b/second code.html
@@ -3,14 +3,14 @@
     <head>
          <title>SH.web introduction.</title>
          <meta charset="utf-8">
+         <!--
          <style>
-          a {color: black; font-style: italic;
-             text-decoration: none;}
-         ol{margin-left: -20px;}
-             h1{text-align: center; font-size:70px; margin-top: -10px;}
+          a {color: black; font-style: italic; text-decoration: none;}
+           ol{margin-left: -20px;}
+            h1{text-align: center; font-size:70px; margin-top: -10px;}
             h2{text-align: center; font-size: 25px;}
-
-      </style>
+          </style>
+        -->
         </head>
     
      <body>
