--- a/second code.html
+++ b/second code.html
@@ -26,13 +26,13 @@
          <h2>I'm 18</h2>
            <div>
                <span style="color: aqua;">contact</span> 
-            <p>SeokHyeon's <a href="https://instagram.com/k_bighyun?igshid=mjedzeae8pga" target="blank"> instagram </a></p> 
-                <p>SeokHyeon's <a href="https://m.blog.naver.com/102eagless" target="blank">naver blog</a></p>
+            <p>SeokHyeon's <a href="https://instagram.com/k_bighyun?igshid=mjedzeae8pga" target="blank" style="color: royalblue;"> instagram </a></p> 
+                <p>SeokHyeon's <a href="https://m.blog.naver.com/102eagless" target="blank" style="color: royalblue;">naver blog</a></p>
                 <p>SeokHyeon's <a href="카카오톡 오픈채팅을 시작해 보세요.
                     링크를 선택하면 카카오톡이 실행됩니다.
                     
                     웹사이트 타고 들어온 사람들
-                    https://open.kakao.com/o/sawUNMLc">kakaotalk openchat</a></p>
+                    https://open.kakao.com/o/sawUNMLc" style="color: royalblue;">kakaotalk openchat</a></p>
               <p>
                 
                 learned coding from here &#8595; <br><iframe width="640" height="360" src="https://www.youtube.com/embed/tZooW6PritE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
