--- a/first code.html
+++ b/first code.html
@@ -16,7 +16,7 @@
     
      <body>
          <p>
-            <h1><a href="index.html">Main</a></h1>
+            <h1><a href="index.html">First Web</a></h1>
             <ol>
             <li><a href="first code.html" class="saw">Title</a></li>
             <li><a href="second code.html" class="saw">Introduction</a> </li>
