--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
      <body>
          <p>
-             <h1><a href="index.html" class="title">Main</a></h1>
+             <h1><a href="index.html" class="title">First Web</a></h1>
              <ol>
              <li><a href="first code.html" class="saw">Title</a></li>
              <li><a href="second code.html" class="saw">Introduction</a> </li>
@@ -29,9 +29,10 @@
          <h2>SeokHyeon's First Web</h2>
            <div>
                <p>
-                  <h3> Wellcome to SeokHyeon's Web</h3>
+                  <h3 class="indexh3"> Wellcome to SeokHyeon's Web</h3>
                    <br> <img src="homeimg.jpg" alt="work space" width="100%" style="max-width: 1100px;">
-               </p>
+                   <link rel="stylesheet" href="index.css">
+                </p>
                <p style="margin-top: -20px;">my workspace</p>
           </div> 
      </body>
