--- a/third code.html
+++ b/third code.html
@@ -11,7 +11,13 @@
             h2{text-align: center; font-size: 25px;}
         </style>
          -->
-    </head>
+         <style>
+             img{display: block; margin: 0px auto;}
+         div{text-align: center;}
+         </style>
+
+        </head>
+
      
    <body>
          <p>
@@ -33,7 +39,7 @@
                </p>
                <p>
                    하울의 움직이는 성 드로잉 (feat.수학시간) <br><img src="castlehaul.jpg" alt="하울의 움직이는 성" width="100%" style="max-width: 700px;">
-               </p>
+                </p>
            </div> 
      </body>
  </html>
