--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         
         </style> 
         -->
+       <style>
+           img{text-align: center; max-width: 1100px;}
+       </style>
         </head>
     
      <body>
@@ -30,10 +33,11 @@
            <div>
                <p>
                   <h3 class="indexh3"> Wellcome to SeokHyeon's Web</h3>
-                   <br> <img src="homeimg.jpg" alt="work space" width="100%" style="max-width: 1100px;">
+                   <br> <div style="text-align:center"><img src="homeimg.jpg" alt="work space" width="100%"></div>
                    <link rel="stylesheet" href="index.css">
                 </p>
-               <p style="margin-top: -20px;">my workspace</p>
+               <p id="textmyworkplace">my workspace</p>
+               <link rel="stylesheet" href="index.css">
           </div> 
      </body>
  </html>
